force-app/main/default/objects/Account/fields/Active_subscription__c.field-meta.xml
<CustomField>
    <fullName>Active_subscription__c</fullName>
    <formula>TODAY() &lt; (Purchase_date__c + 30)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active subscription</label>
    <type>Checkbox</type>
</CustomField>