force-app/main/default/objects/Account/fields/Expiration_date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_date__c</fullName>
    <description>Calculates the membership&#39;s expiration date (30 days after purchase)</description>
    <formula>Purchase_date__c +30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiration date</label>
    <type>Date</type>
</CustomField>