force-app/main/default/objects/Account/fields/Profile_Pic__c.field-meta.xml
<CustomField>
    <fullName>Profile_Pic__c</fullName>
    <label>Profile Pic</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>