force-app/main/default/objects/Account/fields/Purchase_date__c.field-meta.xml
<CustomField>
    <fullName>Purchase_date__c</fullName>
    <description>Date when the user&#39;s membership was activated.</description>
    <label>Purchase date</label>
    <type>Date</type>
</CustomField>