force-app/main/default/objects/Account/fields/Subscribed__c.field-meta.xml
<CustomField>
    <fullName>Subscribed__c</fullName>
    <formula>IF( Expiration_date__c &lt; TODAY(), &quot;Active&quot;, &quot;Inactive&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscribed?</label>
    <type>Text</type>
</CustomField>